--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
             <div class="destination" id="belize">
                 <h2>Belize</h2>
             </div>
-
+            <div class="destination" id="belize">
+                <h2>tunis</h2>
+            </div>
             <div class="destination" id="barcelona">
                 <h2>Sao Paolo</h2>
             </div>
