--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 
     <div class="container">
         <div class="destination-container">
+        	<div class="destination" id="belize">
+                <h2>Seattle</h2>
+            </div>
             <div class="destination" id="belize">
                 <h2>Belize</h2>
             </div>
             <div class="destination" id="belize">
-                <h2>tunis</h2>
+                <h2>Tunis</h2>
             </div>
             <div class="destination" id="barcelona">
                 <h2>Sao Paolo</h2>
